# paquete_prueba_python

./: README.md
src/: LICENSE  pyproject.toml
src/example_package_CALCULO_DIAMETRO_PROMEDIO/: example.py
