[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_CALCULO_DIAMETRO_PROMEDIO"
version = "0.0.1"
authors = [
  { name="Aitor Vázquez Veloso", email="aitorvv96@gmail.com" },
]
description = "Mean dbh calculator"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"